--- a/wsapp/static/css/navbar.css
+++ b/wsapp/static/css/navbar.css
@@ -34,7 +34,7 @@
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link.active {
   text-decoration: underline;
-  text-decoration-color: red;
+  text-decoration-color: white;
   text-decoration-thickness: 1px;
   text-underline-offset: 10px;
 }
